Fix issue with footer overlapping content

--- a/app/assets/stylesheets/bioportal.css.scss
+++ b/app/assets/stylesheets/bioportal.css.scss
@@ -1,49 +1,3 @@
-
-/* Sticky footer styles from Bootstrap: 
-   http://getbootstrap.com/examples/sticky-footer/sticky-footer.css
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
-}
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 320px;
-}
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 320px;
-  color: #757575;
-  /*background-color: #f5f5f5;*/
-  background-color: #ccc;
-  padding: 30px 0;
-}
-
-/* Footer 
--------------------------------------------------- */
-.social-icons li {
-  margin-right: 10px;
-  margin-top: 5px;
-}
-
-@media only screen and (max-width: 992px) {
-  .footer {
-    height: 375px;
-  }
-}
-
-@media only screen and (max-width: 768px) {
-  .footer {
-    height: 650px;
-  }
-}
-
-
-
-
 /* TODO: We are moving to Bootstrap, and away from YUI.  YUI styles should be stripped out. */
 
 /* Initialize */
@@ -54,7 +8,7 @@ html {
   background:#234979;
 }
 */
-body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, input, textarea, p, blockquote, th, td {
+div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, input, textarea, p, blockquote, th, td {
   margin:0;
   padding:0;
 }
