--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,2 +1,50 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+/* Sticky footer styles from Bootstrap: 
+   http://getbootstrap.com/examples/sticky-footer/sticky-footer.css
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 320px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 320px;
+  color: #757575;
+  /*background-color: #f5f5f5;*/
+  background-color: #ccc;
+  padding: 30px 0;
+}
+
+/* Footer 
+-------------------------------------------------- */
+.social-icons li {
+  margin-right: 10px;
+  margin-top: 5px;
+}
+
+@media only screen and (max-width: 992px) {
+  body {
+    margin-bottom: 375px; 
+  }  
+  .footer {
+    height: 375px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  body {
+    margin-bottom: 650px;
+  }
+  .footer {
+    height: 650px;
+  }
+}
